# topic-extraction-poc

./: .gitignore  PKG-INFO  README.md  pyproject.toml
LEARNING_GUIDE/: CHEAT_SHEET.md  README.md  VISUAL_GUIDE.md
tests/: test_config.py  test_hierarchy.py  test_model_basic.py  test_save_load.py  test_soft_assignment.py  test_stopwords.py
tritopic/: __init__.py
tritopic/core/: clustering.py  embeddings.py  graph_builder.py  hierarchy.py  keywords.py  model.py
tritopic/labeling/: llm_labeler.py
tritopic/utils/: metrics.py  stopwords.py
tritopic/visualization/: plotter.py
