[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tritopic"
version = "2.3.0"
description = "TriTopic: Tri-Modal Graph Topic Modeling with Iterative Refinement — state-of-the-art topic modeling that outperforms BERTopic, LDA, and NMF across all standard benchmarks."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Roman Egger", email = "roman.egger@smartvisions.at"}
]
maintainers = [
    {name = "Roman Egger", email = "roman.egger@smartvisions.at"}
]
keywords = [
    "topic-modeling",
    "nlp",
    "natural-language-processing",
    "machine-learning",
    "graph-clustering",
    "leiden-algorithm",
    "consensus-clustering",
    "embeddings",
    "sentence-transformers",
    "text-analysis",
    "text-mining",
    "text-clustering",
    "document-clustering",
    "bertopic-alternative",
    "topic-model",
    "unsupervised-learning",
    "graph-neural-network",
    "multi-view-learning",
    "iterative-refinement",
    "coherence",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "sentence-transformers>=2.2.0",
    "leidenalg>=0.9.0",
    "igraph>=0.10.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
    "plotly>=5.0.0",
    "tqdm>=4.60.0",
    "rank-bm25>=0.2.0",
    "keybert>=0.7.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]
full = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "pacmap>=0.6.0",
    "datamapplot>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
benchmark = [
    "bertopic>=0.16.0",
    "datasets>=2.14.0",
]

[project.urls]
Homepage = "https://www.smartvisions.at"
Documentation = "https://github.com/SmartVisions-AI/tritopic/blob/main/docs/docs.md"
Repository = "https://github.com/SmartVisions-AI/tritopic"
Issues = "https://github.com/SmartVisions-AI/tritopic/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["tritopic*"]

[tool.setuptools.package-data]
tritopic = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
